fix: [PL-40884]: harness secret manager UI item alignment in secret manager list (#17594)
* fix: harness secret manager UI item alignment in secret manager list

* fix: harness secret manager UI item alignment in secret manager list

* fix: harness secret manager UI item alignment in secret manager list

* fix: harness secret manager UI item alignment in secret manager list

* fix: harness secret manager UI item alignment in secret manager list

* fix: jest

--- a/src/modules/27-platform/connectors/components/ConnectorReferenceField/ConnectorReferenceField.module.scss
+++ b/src/modules/27-platform/connectors/components/ConnectorReferenceField/ConnectorReferenceField.module.scss
@@ -12,6 +12,9 @@
       padding-left: var(--spacing-xsmall);
     }
   }
+  .editButtonWrapper {
+    width: var(--spacing-9);
+  }
   .edit-btn {
     visibility: hidden;
   }
